k8s/base/relay/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamecloud-relay
spec:
  selector:
    matchLabels:
      app: gamecloud-relay
      app.kubernetes.io/part-of: gamecloud
      app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      labels:
        app: gamecloud-relay
        app.kubernetes.io/part-of: gamecloud
        app.kubernetes.io/managed-by: kustomize
    spec:
      containers:
        - name: gamecloud-relay
          image: cr.yandex/crpl3p256m938dtgp3lh/gamecloud-relay:latest
          ports:
            - containerPort: 8090
              name: http
            - containerPort: 9000
              name: ws
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          command: ["./relay-server"]
          args: ["-env", "/app/config/.env"]
          volumeMounts:
            - name: config-volume
              mountPath: "/app/config"
          livenessProbe:
            httpGet:
              path: /live
              port: 8090
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /ready
              port: 8090
            initialDelaySeconds: 10
            periodSeconds: 15
      volumes:
        - name: config-volume
          configMap:
            name: relay-config
